roles/install-gaussdb-monitor-server/files/gaussdb-monitoring-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gaussdb-monitoring
