roles/install-gaussdb-monitor-server/files/gaussdb-monitoring-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: monitor-server
  namespace: gaussdb-monitoring
  annotations:
    maintainer: lujinzhu@cicem.fa
    prometheus.io/http-probe: "true"
    prometheus.io/http-probe-port: "9990"
    prometheus.io/http-probe-path: "/monitor-server/actuator/health"
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9990
      targetPort: 9990
    - name: wsr
      port: 80
      targetPort: 80
  selector:
    app: monitor-server
